# vue-pure-admin-all

./: README.md
service/: .env.example  .gitignore  README.md  REORGANIZE.md  main.py  pyproject.toml  pytest.ini  requirements.txt  start.bat  start.sh  xadmin_fastapi.db
service/app/: config.py  main.py
service/app/application/: __init__.py
service/app/domain/: __init__.py
service/app/infrastructure/: __init__.py
service/app/presentation/: __init__.py
service/db/: README.md
service/db/backup/: README.md
service/db/init/: 01_create_tables.sql  01_create_tables_sqlite.sql  02_insert_data.sql  03_create_indexes.sql  04_rbac_tables.sql  05_test_user_table.sql  vue_pure_admin.sql
service/db/migrations/: README.md
service/docs/: .gitkeep  API_DOCUMENTATION.md  DATABASE.md  DDD_RBAC_ARCHITECTURE.md  DOCKER.md  PROJECT_STRUCTURE.md  REST_API_SPECIFICATION.md  refactor.md
service/scripts/database/: db_manager.bat  db_manager.sh  setup_database.bat  setup_database.sh  update_passwords.py
service/scripts/docker/: Dockerfile  docker-compose.yml
service/scripts/environment/: check_venv.bat  check_venv.sh  setup_venv.bat  setup_venv.sh
service/shared/: __init__.py
service/shared/kernel/: __init__.py  config.py  dependencies.py  exceptions.py
service/tests/: conftest.py  requirements.txt  run_tests.py  test_auth.py  test_users.py  utils.py
service/tests/application/: __init__.py
service/tests/domain/: __init__.py
service/tests/fixtures/: __init__.py  auth.py  client.py  data.py  database.py
service/tests/infrastructure/: __init__.py
(+245 files in other folders)
